# ConnectFour-RL-DQN-MCTS

./: .gitignore  Makefile  README.md  pyproject.toml
connectfour/: __init__.py  connect_four_convolutional.py  connect_four_dqn_dense.py  dqn_agent.py  enhanced_trainer.py  mcts.py  play_game.py  plot_trainings_metrics.py  replay_memory.py  train.py  train_base.py  train_random.py
metrics/: dqn_training_metrics.json  dqn_training_metrics_random_first_player_0.json  dqn_training_metrics_random_first_player_140000.json  dqn_training_metrics_random_first_player_90000.json  dqn_training_metrics_self_play_0.json
models/: dqn_agent_self_play.pth  dqn_agent_self_play_dualing.pth  dqn_agent_self_play_mps.pth
